# amareleo-chain

./: .rusty-hook.toml  Cargo.toml  README.md  block0.json  build.rs  build_ubuntu.sh  code_migration.md
.circleci/: config.yml  devnet_ci.sh
account/: Cargo.toml  README.md
amareleo/: Cargo.toml
amareleo/src/: main.rs
api/: Cargo.toml  README.md
api/src/: api.rs  lib.rs
api/src/api/: api_data.rs  api_helpers.rs  api_logs.rs  api_node.rs  api_state.rs  api_tests.rs  api_validator.rs  mod.rs
api/src/helpers/: logger.rs  mod.rs  trace_layers.rs
cli/: Cargo.toml  README.md
cli/src/: lib.rs
cli/src/commands/: clean.rs  mod.rs  start.rs  update.rs
cli/src/helpers/: dynamic_format.rs  log_writer.rs  logger.rs  mod.rs  updater.rs
docs/: 00_introduction.md  01_intallation.md  02_running.md  03_differences.md
hooks/: pre-commit-hook.sh
node/: Cargo.toml  README.md
node/bft/: Cargo.toml  README.md
node/bft/events/: Cargo.toml  README.md
node/bft/events/src/: lib.rs  primary_ping.rs
node/bft/ledger-service/: Cargo.toml  README.md
node/bft/ledger-service/src/: ledger.rs  lib.rs  mock.rs  prover.rs  traits.rs  translucent.rs
node/bft/src/: bft.rs  lib.rs  primary.rs  worker.rs
node/bft/src/helpers/: channels.rs  dag.rs  ledger_files.rs  mod.rs  proposal.rs  proposal_cache.rs  storage.rs
node/bft/src/sync/: mod.rs
node/bft/storage-service/: Cargo.toml  README.md
node/bft/storage-service/src/: lib.rs  memory.rs  persistent.rs
node/consensus/: Cargo.toml  README.md
node/consensus/src/: lib.rs
node/helpers/: Cargo.toml
node/helpers/src/: helpers.rs  lib.rs
node/metrics/: Cargo.toml  README.md  amareleo-grafana.json  prometheus.yml
node/metrics/src/: lib.rs  names.rs
node/rest/: Cargo.toml  README.md
node/rest/src/: lib.rs  routes.rs
node/router/: Cargo.toml
node/router/messages/: Cargo.toml
node/router/messages/src/: lib.rs  ping.rs
node/router/src/: handshake.rs  heartbeat.rs  inbound.rs  lib.rs  outbound.rs  routing.rs
node/router/tests/: cleanups.rs  connect.rs  disconnect.rs
node/router/tests/common/: mod.rs  router.rs
node/src/: lib.rs  node.rs  traits.rs
node/src/validator/: mod.rs  router.rs
node/sync/: Cargo.toml  README.md
node/sync/locators/: Cargo.toml  README.md
node/sync/src/: block_locators.rs  block_sync.rs  lib.rs
node/tcp/: Cargo.toml
resources/: Cargo.toml  README.md
resources/data/: block0_mainnet.raw
resources/src/: lib.rs
src/: lib.rs  main.rs
tracing/: Cargo.toml  README.md
tracing/src/: lib.rs  logger.rs  trace_layers.rs
