[package]
name = "amareleo-chain"
version = "2.0.0"
authors = [
    "The Aleo Team <hello@aleo.org>",
    "The Amareleo Team <support@windeveloper.com>",
]
description = "A decentralized operating system"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.81.0" # Attention - Change the MSRV in rust-toolchain and in .circleci/config.yml as well

[workspace]
members = [
  "resources",
  "account",
  "cli", 
  "node", 
  "node/bft",
  "node/bft/events",
  "node/bft/ledger-service",
  "node/bft/storage-service",
  "node/consensus",
  "node/metrics",
  "node/rest",
  "node/sync",
  "node/sync/locators"
  ]

[[bin]]
name = "amareleo-chain"
path = "src/main.rs"

[features]
metrics = [ 
  "snarkos-lite-node-metrics", 
  "snarkos-lite-node/metrics" 
  ]
history = [ "snarkos-lite-node/history" ]
test_targets = [ "snarkos-lite-cli/test_targets" ]

[dependencies]

[workspace.dependencies.aleo-std]
version = "=0.1.24"
default-features = false

[workspace.dependencies.snarkvm] # If this is updated, the rev in `node/rest/Cargo.toml` must be updated as well.
#path = "../snarkVM"
#git = "https://github.com/AleoNet/snarkVM.git"
#rev = "6322baf"
version = "=1.1.0"
features = [ "circuit", "console", "rocks" ]

[dependencies.anyhow]
version = "1.0.79"

[dependencies.clap]
version = "4.4"
features = [ "derive" ]

[dependencies.snarkos-lite-account]
path = "./account"
version = "=3.1.0"

[dependencies.snarkos-lite-cli]
path = "./cli"
version = "=3.1.0"

[dependencies.snarkos-lite-node]
path = "./node"
version = "=3.1.0"

[dependencies.snarkos-lite-node-bft]
path = "./node/bft"
version = "=3.1.0"

[dependencies.snarkos-lite-node-consensus]
path = "./node/consensus"
version = "=3.1.0"

[dependencies.snarkos-lite-node-metrics]
path = "./node/metrics"
version = "=3.1.0"
optional = true

[dependencies.snarkos-lite-node-rest]
path = "./node/rest"
version = "=3.1.0"

[dependencies.snarkos-lite-node-sync]
path = "./node/sync"
version = "=3.1.0"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies.rusty-hook]
version = "0.11.2"

[build-dependencies.walkdir]
version = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 2
lto = "thin"
incremental = true

[profile.test]
opt-level = 2
lto = "thin"
incremental = true
debug = true
debug-assertions = true
