[package]
name = "amareleo-chain"
version = "2.0.2"
authors = ["The Amareleo Team <amareleo@windeveloper.com>"]
description = "A lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = [
  "aleo",
  "amareleo",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.82.0" # Attention - Change the MSRV in rust-toolchain and in .circleci/config.yml as well

[workspace]
members = [
  "resources",
  "account",
  "cli", 
  "api", 
  "tracing",
  "node", 
  "node/bft",
  "node/bft/events",
  "node/bft/ledger-service",
  "node/bft/storage-service",
  "node/consensus",
  "node/metrics",
  "node/rest",
  "node/sync"
  ]

[lib]
path = "src/lib.rs"
test = false

[[bin]]
name = "amareleo-chain"
path = "src/main.rs"
test = false

[features]
metrics = [ 
  "amareleo-node-metrics", 
  "amareleo-node/metrics" 
  ]
history = [ "amareleo-node/history" ]
test_targets = [ "amareleo-chain-cli/test_targets" ]

[dependencies]

[workspace.dependencies.aleo-std]
version = "=0.1.24"
default-features = false

[workspace.dependencies.snarkvm] # If this is updated, the rev in `node/rest/Cargo.toml` must be updated as well.
#path = "../snarkVM"
#git = "https://github.com/ProvableHQ/snarkVM.git"
#rev = "32bf9ab"
version = "=1.3.0"
features = [ "circuit", "console", "rocks" ]

[dependencies.anyhow]
version = "1.0.79"

[dependencies.clap]
version = "4.4"
features = [ "derive" ]

[dependencies.amareleo-chain-account]
path = "./account"
version = "=2.0.2"

[dependencies.amareleo-chain-cli]
path = "./cli"
version = "=2.0.2"

[dependencies.amareleo-chain-tracing]
path = "./tracing"
version = "=2.0.2"

[dependencies.amareleo-chain-api]
path = "./api"
version = "=2.0.2"

[dependencies.amareleo-node]
path = "./node"
version = "=2.0.2"

[dependencies.amareleo-node-bft]
path = "./node/bft"
version = "=2.0.2"

[dependencies.amareleo-node-consensus]
path = "./node/consensus"
version = "=2.0.2"

[dependencies.amareleo-node-metrics]
path = "./node/metrics"
version = "=2.0.2"
optional = true

[dependencies.amareleo-node-rest]
path = "./node/rest"
version = "=2.0.2"

[dependencies.amareleo-node-sync]
path = "./node/sync"
version = "=2.0.2"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies.rusty-hook]
version = "0.11.2"

[build-dependencies.built]
version = "0.7"
features = [ "git2" ]

[build-dependencies.walkdir]
version = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 2
lto = "thin"
incremental = true

[profile.test]
opt-level = 2
lto = "thin"
incremental = true
debug = true
debug-assertions = true
