[package]
name = "snarkos-lite-account"
version = "3.1.0"
authors = [
    "The Aleo Team <hello@aleo.org>",
    "The Amareleo Team <support@windeveloper.com>",
]
description = "Account for a decentralized operating system"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = [
    "aleo",
    "cryptography",
    "blockchain",
    "decentralized",
    "zero-knowledge",
]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
test_targets = ["snarkvm/test_targets"]

[dependencies.anyhow]
version = "1.0.79"

[dependencies.colored]
version = "2"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.snarkvm]
workspace = true
features = ["console"]
