[package]
name = "amareleo-chain-account"
version = "2.0.1"
authors = [
    "The Aleo Team <hello@aleo.org>",
    "The Amareleo Team <support@windeveloper.com>",
]
description = "Account for a decentralized operating system"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = [
    "aleo",
    "cryptography",
    "blockchain",
    "decentralized",
    "zero-knowledge",
]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
test_targets = ["snarkvm/test_targets"]

[dependencies.colored]
version = "2"

[dependencies.snarkvm]
workspace = true
features = ["console"]
