[package]
name = "amareleo-chain-account"
version = "2.0.2"
authors = ["The Amareleo Team <amareleo@windeveloper.com>"]
description = "Account for a lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = ["aleo", "amareleo", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
test_targets = ["snarkvm/test_targets"]

[dependencies.colored]
version = "2"

[dependencies.snarkvm]
workspace = true
features = ["console"]
