[package]
name = "amareleo"
version = "2.0.2"
authors = ["The Amareleo Team <amareleo@windeveloper.com>"]
description = "A lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = [
  "aleo",
  "amareleo",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.81.0" # Attention - Change the MSRV in rust-toolchain and in .circleci/config.yml as well

[[bin]]
name = "amareleo"
path = "src/main.rs"


[dependencies]

[dependencies.anyhow]
version = "1.0.79"

[dependencies.amareleo-chain]
path = ".."
version = "=2.0.2"

