[package]
name = "amareleo-chain-api"
version = "2.0.2"
authors = ["The Amareleo Team <amareleo@windeveloper.com>"]
description = "API for a lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = ["aleo", "amareleo", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
default = ["amareleo-node/metrics"]
test_targets = ["snarkvm/test_targets"]

[dependencies.anyhow]
version = "1.0.79"

[dependencies.indexmap]
version = "2.1"
features = ["serde", "rayon"]

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rand_chacha]
version = "0.3.0"
default-features = false

[dependencies.tokio]
version = "1.28"
features = ["rt", "rt-multi-thread"]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.amareleo-chain-account]
path = "../account"
version = "=2.0.2"

[dependencies.amareleo-chain-tracing]
path = "../tracing"
version = "=2.0.2"

[dependencies.amareleo-node]
path = "../node"
version = "=2.0.2"

[dependencies.amareleo-node-bft]
path = "../node/bft"
version = "=2.0.2"

[dependencies.amareleo-chain-resources]
path = "../resources"
version = "=2.0.2"

[dependencies.snarkvm]
workspace = true

[dev-dependencies.serial_test]
version = "3.2.0"
