[package]
name = "amareleo-chain-cli"
version = "2.0.2"
authors = ["The Amareleo Team <support@windeveloper.com>"]
description = "A CLI for a lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = ["aleo", "amareleo", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
default = ["amareleo-node/metrics"]
test_targets = ["snarkvm/test_targets"]

[dependencies.anstyle]
version = "1"

[dependencies.anyhow]
version = "1.0.79"

[dependencies.clap]
version = "4.4"
features = ["derive", "color", "unstable-styles"]

[dependencies.colored]
version = "2"

[dependencies.crossterm]
version = "0.27"

[dependencies.indexmap]
version = "2.1"
features = ["serde", "rayon"]

[dependencies.metrics]
package = "amareleo-node-metrics"
path = "../node/metrics"
version = "=2.0.2"

[dependencies.num_cpus]
version = "1"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rand_chacha]
version = "0.3.0"
default-features = false

[dependencies.rayon]
version = "1"

[dependencies.self_update]
version = "0.41"
features = ["archive-zip", "compression-zip-deflate"]

[dependencies.amareleo-chain-resources]
path = "../resources"
version = "=2.0.2"

[dependencies.amareleo-chain-account]
path = "../account"
version = "=2.0.2"

[dependencies.amareleo-node]
path = "../node"
version = "=2.0.2"

[dependencies.amareleo-node-rest]
path = "../node/rest"
version = "=2.0.2"

[dependencies.snarkvm]
workspace = true

[dependencies.time]
version = "0.3"
features = ["formatting"]

[dependencies.thiserror]
version = "1.0"

[dependencies.tokio]
version = "1.28"
features = ["rt", "rt-multi-thread"]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[target."cfg(target_family = \"unix\")".dependencies.nix]
version = "0.26"
