[package]
name = "amareleo-chain-cli"
version = "2.5.0"
authors = ["The Amareleo Team <amareleo@windeveloper.com>"]
description = "A CLI for a lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = ["aleo", "amareleo", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
locktick = [
    "dep:locktick",
    "amareleo-chain-api/locktick",
    "amareleo-node/locktick",
    "amareleo-node-rest/locktick",
    "snarkvm/locktick",
]
metrics = ["dep:metrics", "amareleo-chain-api/metrics", "amareleo-node/metrics"]
test_network = ["snarkvm/test_targets", "snarkvm/test_consensus_heights"]

[dependencies.anstyle]
version = "1"

[dependencies.glob]
version = "0.3"

[dependencies.anyhow]
version = "1.0.79"

[dependencies.clap]
version = "4.4"
features = ["derive", "color", "unstable-styles"]

[dependencies.colored]
version = "2"

[dependencies.locktick]
version = "0.3"
features = ["parking_lot"]
optional = true

[dependencies.metrics]
package = "amareleo-node-metrics"
path = "../node/metrics"
version = "=2.5.0"
optional = true

[dependencies.num_cpus]
version = "1"

[dependencies.rayon]
version = "1"

[dependencies.self_update]
version = "0.41"
features = ["archive-zip", "compression-zip-deflate"]

[dependencies.crossterm]
version = "0.27"

[dependencies.time]
version = "0.3"
features = ["formatting"]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.amareleo-node]
path = "../node"
version = "=2.5.0"

[dependencies.amareleo-node-rest]
path = "../node/rest"
version = "=2.5.0"

[dependencies.amareleo-chain-tracing]
path = "../tracing"
version = "=2.5.0"

[dependencies.amareleo-chain-api]
path = "../api"
version = "=2.5.0"

[dependencies.snarkvm]
workspace = true

[dependencies.thiserror]
version = "2.0.11"

[dependencies.tokio]
version = "1.28"
features = ["rt", "rt-multi-thread"]

[target."cfg(target_family = \"unix\")".dependencies.nix]
version = "0.26"
