[package]
name = "snarkos-lite-node"
version = "3.1.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "A node for a decentralized operating system"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = [
    "aleo",
    "cryptography",
    "blockchain",
    "decentralized",
    "zero-knowledge",
]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[dependencies.snarkvm]
workspace = true
features = ["console"]

[dependencies.aleo-std]
workspace = true

[dependencies.snarkos-lite-account]
workspace = true

[dependencies.snarkos-lite-node-bft]
path = "./bft"
version = "=3.1.0"

[dependencies.anyhow]
version = "1.0.79"

[dependencies.async-trait]
version = "0.1"

[dependencies.once_cell]
version = "1"

[dependencies.tokio]
version = "1.28"
features = ["rt", "signal", "macros"]

[dependencies.tokio-util]
version = "0.7"

[dependencies.tracing]
version = "0.1"
