[package]
name = "snarkos-lite-node"
version = "3.1.0"
authors = [
    "The Aleo Team <hello@aleo.org>",
    "The Amareleo Team <support@windeveloper.com>",
]
description = "A node for a decentralized operating system"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = [
    "aleo",
    "cryptography",
    "blockchain",
    "decentralized",
    "zero-knowledge",
]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
default = ["parallel"]
parallel = ["rayon"]
timer = ["aleo-std/timer"]
metrics = [
    "dep:metrics",
    "snarkos-lite-node-bft/metrics",
    "snarkos-lite-node-consensus/metrics",
    "snarkos-lite-node-router/metrics",
    "snarkos-lite-node-tcp/metrics",
]
history = ["snarkos-lite-node-rest/history"]
test_targets = ["snarkvm/test_targets"]

[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
version = "1.0.79"

[dependencies.async-trait]
version = "0.1"

[dependencies.metrics]
package = "snarkos-lite-node-metrics"
path = "./metrics"
version = "=3.1.0"
optional = true

[dependencies.once_cell]
version = "1"

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rayon]
version = "1"
optional = true

[dependencies.snarkos-lite-account]
workspace = true

[dependencies.snarkos-lite-node-bft]
path = "./bft"
version = "=3.1.0"

[dependencies.snarkos-lite-node-consensus]
path = "./consensus"
version = "=3.1.0"

[dependencies.snarkos-lite-node-rest]
path = "./rest"
version = "=3.1.0"

[dependencies.snarkos-lite-node-router]
path = "./router"
version = "=3.1.0"

[dependencies.snarkos-lite-node-sync]
path = "./sync"
version = "=3.1.0"

[dependencies.snarkos-lite-node-tcp]
path = "./tcp"
version = "=3.1.0"

[dependencies.snarkvm]
workspace = true
features = ["console"]

[dependencies.tokio]
version = "1.28"
features = ["rt", "signal", "macros"]

[dependencies.tokio-util]
version = "0.7"

[dependencies.tracing]
version = "0.1"

[dev-dependencies.rand_chacha]
version = "0.3.0"
