[package]
name = "amareleo-node"
version = "2.4.1"
authors = ["The Amareleo Team <amareleo@windeveloper.com>"]
description = "A node for a lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = ["aleo", "amareleo", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
default = ["parallel"]
parallel = ["rayon"]
timer = ["aleo-std/timer"]
locktick = [
    "dep:locktick",
    "amareleo-node-bft/locktick",
    "amareleo-node-consensus/locktick",
    "amareleo-node-rest/locktick",
    "amareleo-node-sync/locktick",
    "snarkvm/locktick",
]
metrics = [
    "dep:metrics",
    "amareleo-node-bft/metrics",
    "amareleo-node-consensus/metrics",
]
history = ["amareleo-node-rest/history"]
test_targets = ["snarkvm/test_targets"]

[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
version = "1.0.79"

[dependencies.locktick]
version = "0.3"
features = ["parking_lot"]
optional = true

[dependencies.metrics]
package = "amareleo-node-metrics"
path = "./metrics"
version = "=2.4.1"
optional = true

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rayon]
version = "1"
optional = true

[dependencies.amareleo-chain-tracing]
path = "../tracing"
version = "=2.4.1"

[dependencies.amareleo-chain-account]
path = "../account"
version = "=2.4.1"

[dependencies.amareleo-node-bft]
path = "./bft"
version = "=2.4.1"

[dependencies.amareleo-node-consensus]
path = "./consensus"
version = "=2.4.1"

[dependencies.amareleo-node-rest]
path = "./rest"
version = "=2.4.1"

[dependencies.amareleo-node-sync]
path = "./sync"
version = "=2.4.1"

[dependencies.snarkvm]
workspace = true
features = ["console"]

[dependencies.tokio]
version = "1.28"
features = ["rt", "signal", "macros"]

[dependencies.tracing]
version = "0.1"

[dev-dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "fmt"]

[dev-dependencies.rand_chacha]
version = "0.3.0"
