[package]
name = "amareleo-chain-resources"
version = "2.1.0"
authors = ["The Amareleo Team <amareleo@windeveloper.com>"]
description = "Resources for a lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = ["aleo", "amareleo", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
