[package]
name = "amareleo-chain-tracing"
version = "2.2.0"
authors = ["The Amareleo Team <amareleo@windeveloper.com>"]
description = "Tracing for a lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = ["aleo", "amareleo", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[dependencies.anyhow]
version = "1.0.79"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
