[package]
name = "amareleo-node-bft"
version = "2.4.1"
authors = ["The Amareleo Team <amareleo@windeveloper.com>"]
description = "A memory pool for a lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = ["aleo", "amareleo", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
default = []
locktick = [
    "dep:locktick",
    "amareleo-node-bft-ledger-service/locktick",
    "amareleo-node-bft-storage-service/locktick",
    "amareleo-node-sync/locktick",
    "snarkvm/locktick",
]
metrics = ["dep:metrics", "amareleo-node-bft-ledger-service/metrics"]

[dependencies.aleo-std]
workspace = true

[dependencies.hex]
version = "0.4"

[dependencies.anyhow]
version = "1.0.79"

[dependencies.async-recursion]
version = "1.0"

[dependencies.async-trait]
version = "0.1"

[dependencies.bytes]
version = "1"

[dependencies.colored]
version = "2"

[dependencies.futures]
version = "0.3.30"
features = ["thread-pool"]

[dependencies.indexmap]
version = "2.1"
features = ["serde", "rayon"]

[dependencies.locktick]
version = "0.3"
features = ["parking_lot", "tokio"]
optional = true

[dependencies.metrics]
package = "amareleo-node-metrics"
path = "../metrics"
version = "=2.4.1"
optional = true

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1"

[dependencies.sha2]
version = "0.10"
default-features = false

[dependencies.amareleo-chain-tracing]
path = "../../tracing"
version = "=2.4.1"

[dependencies.amareleo-chain-account]
path = "../../account"
version = "=2.4.1"

[dependencies.amareleo-node-bft-ledger-service]
path = "./ledger-service"
version = "=2.4.1"
features = ["ledger", "prover"]

[dependencies.amareleo-node-bft-storage-service]
path = "./storage-service"
version = "=2.4.1"
features = ["memory"]

[dependencies.amareleo-node-sync]
path = "../sync"
version = "=2.4.1"

[dependencies.snarkvm]
workspace = true

[dependencies.time]
version = "0.3"

[dependencies.tokio]
version = "1.28"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.tracing]
version = "0.1"

[dependencies.rand_chacha]
version = "0.3.0"
default-features = false

[dev-dependencies.axum]
version = "0.8"

[dev-dependencies.axum-extra]
version = "0.10"
default-features = false
features = ["erased-json"]

[dev-dependencies.clap]
version = "4.4"

[dev-dependencies.deadline]
version = "0.2"

[dev-dependencies.itertools]
version = "0.12"

[dev-dependencies.open]
version = "5"

[dev-dependencies.paste]
version = "1"

[dev-dependencies.pea2pea]
version = "0.49"

[dev-dependencies.proptest]
version = "1.4.0"

[dev-dependencies.rand_chacha]
version = "0.3"

[dev-dependencies.rand_distr]
version = "0.4"

[dev-dependencies.rayon]
version = "1"

[dev-dependencies.amareleo-node-bft-ledger-service]
path = "./ledger-service"
default-features = false
features = ["test", "ledger-write"]

[dev-dependencies.amareleo-node-bft-storage-service]
path = "./storage-service"
features = ["test"]

[dev-dependencies.snarkvm]
workspace = true
features = ["test-helpers"]

[dev-dependencies.test-strategy]
version = "0.3.1"

[dev-dependencies.tower-http]
version = "0.6"
features = ["fs", "trace"]

[dev-dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dev-dependencies.tracing-test]
version = "0.1"

[dev-dependencies.mockall]
version = "0.12.1"
