[package]
name = "snarkos-lite-node-consensus"
version = "3.1.0"
authors = [
  "The Aleo Team <hello@aleo.org>",
  "The Amareleo Team <support@windeveloper.com>",
]
description = "A node consensus for a decentralized operating system"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge",
]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
default = []
metrics = ["dep:metrics"]
test_targets = ["snarkvm/test_targets"]

[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
version = "1.0.79"

[dependencies.colored]
version = "2"

[dependencies.indexmap]
version = "2.1"
features = ["serde", "rayon"]

[dependencies.lru]
version = "0.12.1"

[dependencies.metrics]
package = "snarkos-lite-node-metrics"
path = "../metrics"
version = "=3.1.0"
optional = true

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"

[dependencies.snarkos-lite-account]
path = "../../account"
version = "=3.1.0"

[dependencies.snarkos-lite-node-bft]
path = "../bft"
version = "=3.1.0"

[dependencies.snarkos-lite-node-bft-ledger-service]
path = "../bft/ledger-service"
version = "=3.1.0"
default-features = false
features = ["ledger", "ledger-write"]

[dependencies.snarkos-lite-node-bft-storage-service]
path = "../bft/storage-service"
version = "=3.1.0"
default-features = false
features = ["persistent"]

[dependencies.snarkvm]
workspace = true

[dependencies.tokio]
version = "1.28"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.tracing]
version = "0.1"

[dev-dependencies.indexmap]
version = "2.0"

[dev-dependencies.itertools]
version = "0.12"

[dev-dependencies.once_cell]
version = "1.19"

[dev-dependencies.tracing-test]
version = "0.2"
