[package]
name = "amareleo-node-metrics"
version = "2.4.1"
authors = ["The Amareleo Team <amareleo@windeveloper.com>"]
description = "A node for a lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = ["aleo", "amareleo", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
default = ["rayon", "snarkvm/metrics"]
locktick = ["dep:locktick", "snarkvm/locktick"]
metrics = ["snarkvm/metrics"]
serial = ["snarkvm/metrics"]

[dependencies.locktick]
version = "0.3"
features = ["parking_lot"]
optional = true

[dependencies.metrics-exporter-prometheus]
version = "0.13"

[dependencies.parking_lot]
version = "0.12"

[dependencies.rayon]
version = "1"
optional = true

[dependencies.snarkvm]
workspace = true
features = ["metrics"]

[dependencies.time]
version = "0.3"
