[package]
name = "amareleo-node-rest"
version = "2.4.1"
authors = ["The Amareleo Team <amareleo@windeveloper.com>"]
description = "A REST API server for a lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = ["aleo", "amareleo", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
default = ["parallel"]
parallel = ["rayon"]
history = ["snarkvm-synthesizer/history"]
locktick = [
    "dep:locktick",
    "amareleo-node-consensus/locktick",
    "snarkvm-synthesizer/locktick",
]
test_targets = ["snarkvm/test_targets"]

[dependencies.anyhow]
version = "1.0.79"

[dependencies.axum]
version = "0.7"

[dependencies.axum-extra]
version = "0.9.0"
features = ["erased-json", "typed-header"]

[dependencies.http]
version = "1.0"

[dependencies.indexmap]
version = "2.1"
features = ["serde", "rayon"]

[dependencies.jsonwebtoken]
version = "9.2"

[dependencies.locktick]
version = "0.3"
features = ["parking_lot"]
optional = true

[dependencies.once_cell]
version = "1.19"

[dependencies.parking_lot]
version = "0.12"

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dependencies.serde_json]
version = "1"
features = ["preserve_order"]

[dependencies.amareleo-chain-tracing]
path = "../../tracing"
version = "=2.4.1"

[dependencies.amareleo-node-consensus]
path = "../consensus"
version = "=2.4.1"

[dependencies.snarkvm-synthesizer]
#path = "../../../snarkVM/synthesizer"
#git = "https://github.com/ProvableHQ/snarkVM.git"
#rev = "e60c5b0"
version = "=3.7.1"
default-features = false
optional = true

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1"
optional = true

[dependencies.snarkvm]
workspace = true

[dependencies.time]
version = "0.3"

[dependencies.tokio]
version = "1"

[dependencies.tower_governor]
version = "0.3"

[dependencies.tower-http]
version = "0.5"
features = ["cors", "trace"]

[dependencies.tracing]
version = "0.1"
