[package]
name = "amareleo-node-sync"
version = "2.0.2"
authors = ["The Amareleo Team <amareleo@windeveloper.com>"]
description = "A synchronization module for a lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = ["aleo", "amareleo", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
default = []
metrics = ["dep:metrics"]
test = ["amareleo-node-sync-locators/test"]
test_targets = ["snarkvm/test_targets"]

[dependencies.metrics]
package = "amareleo-node-metrics"
path = "../metrics"
version = "=2.0.2"
optional = true

[dependencies.amareleo-node-sync-locators]
path = "locators"
version = "=2.0.2"

[dev-dependencies.amareleo-node-sync-locators]
path = "locators"
features = ["test"]

[dev-dependencies.snarkvm]
workspace = true
features = ["test-helpers"]
