[package]
name = "amareleo-node-sync"
version = "2.1.0"
authors = ["The Amareleo Team <amareleo@windeveloper.com>"]
description = "Synchronization for a lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = ["aleo", "amareleo", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
default = []
test = []
test_targets = ["snarkvm/test_targets"]

[dependencies.anyhow]
version = "1.0"

[dependencies.indexmap]
version = "2.1"
features = ["serde", "rayon"]

[dependencies.serde]
version = "1"

[dependencies.snarkvm]
workspace = true

[dependencies.tracing]
version = "0.1"
