[package]
name = "snarkos-lite-node-tcp"
version = "3.1.0"
authors = [
  "The Aleo Team <hello@aleo.org>",
  "The Amareleo Team <support@windeveloper.com>",
]
description = "A TCP stack for a decentralized operating system"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge",
]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
default = []
metrics = ["dep:metrics"]

[dependencies]
async-trait = "0.1"
bytes = "1"
parking_lot = "0.12"

[dependencies.futures-util]
version = "0.3"
features = ["sink"]

[dependencies.metrics]
package = "snarkos-lite-node-metrics"
path = "../metrics"
version = "=3.1.0"
optional = true

[dependencies.once_cell]
version = "1"
features = ["parking_lot"]

[dependencies.tokio]
version = "1.28"
features = ["io-util", "net", "parking_lot", "rt", "sync", "time"]

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]

[dependencies.tracing]
version = "0.1"
default-features = false

[dev-dependencies.tokio]
version = "1.28"
features = ["macros"]
