[package]
name = "amareleo-node-bft-ledger-service"
version = "2.2.0"
authors = ["The Amareleo Team <amareleo@windeveloper.com>"]
description = "A ledger service for the memory pool in a lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = ["aleo", "amareleo", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
default = []
ledger = ["lru", "parking_lot", "rand", "rayon", "tokio", "tracing"]
ledger-write = []
metrics = ["dep:metrics", "snarkvm/metrics"]
mock = ["parking_lot", "tracing"]
prover = []
test = ["mock"]
test_targets = ["snarkvm/test_targets"]

[dependencies.async-trait]
version = "0.1"

[dependencies.indexmap]
version = "2.1"
features = ["serde", "rayon"]

[dependencies.lru]
version = "0.12"
optional = true

[dependencies.metrics]
package = "amareleo-node-metrics"
path = "../../metrics"
version = "=2.2.0"
optional = true

[dependencies.parking_lot]
version = "0.12"
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.rayon]
version = "1"
optional = true

[dependencies.snarkvm]
workspace = true

[dependencies.tokio]
version = "1.28"
features = ["macros", "rt-multi-thread"]
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.amareleo-chain-tracing]
path = "../../../tracing"
version = "=2.2.0"
